# swagger.json
@@ -6,7 +6,7 @@
   },
   "host": "localhost:8080",
   "basePath": "/",
-  "tags": ["Utente", "Authentication"],
+  "tags": ["Utente", "Authentication", "Impianto"],
   "schemes": ["http"],
   "consumes": ["application/json"],
   "produces": ["application/json"],
@@ -102,6 +102,79 @@
           "500": {"description": "INTERNAL SERVER ERROR"}
         }
       }
+    },
+    "/impianto": {
+      "post": {
+        "tags": ["Impianto"],
+        "description": "Create a new plant",
+        "parameters": [
+          {"name":"x-access-token", "in":"header", "type":"string"},
+          { "name":"body",
+          "in":"body",
+          "schema": {"$ref": "#/definitions/Impianto"}}
+          ],
+        "responses": {
+          "201": {"description": "CREATED", "schema": {"$ref": "#/definitions/Impianto" }, "headers": {"x-token-status": {"description": "The status of the token sent", "type":"string", "enum":["empty", "expired", "valid"]}}},
+          "401": {"description": "Token non presente", "headers": {"x-token-status": {"description": "The status of the token sent", "type":"string", "enum":["empty", "expired", "valid"]}}},
+          "403": {"description": "FORBIDDEN", "headers": {"x-token-status": {"description": "The status of the token sent", "type":"string", "enum":["empty", "expired", "valid"]}}},
+          "500": {"description": "INTERNAL SERVER ERROR", "headers": {"x-token-status": {"description": "The status of the token sent", "type":"string", "enum":["empty", "expired", "valid"]}}}
+        }
+      },
+      "get": {
+        "tags": ["Impianto"],
+        "description": "Get all plants in system",
+        "parameters": [
+          {"name":"x-access-token", "in":"header", "type":"string"}],   
+        "responses": {
+          "200": {"description": "OK", "schema": {
+            "type": "array",
+            "items": {
+            "$ref": "#/definitions/Impianto" }}, "headers": {"x-token-status": {"description": "The status of the token sent", "type":"string", "enum":["empty", "expired", "valid"]}}},
+          "401": {"description": "Token non presente", "headers": {"x-token-status": {"description": "The status of the token sent", "type":"string", "enum":["empty", "expired", "valid"]}}},
+          "403": {"description": "FORBIDDEN", "headers": {"x-token-status": {"description": "The status of the token sent", "type":"string", "enum":["empty", "expired", "valid"]}}},
+          "500": {"description": "INTERNAL SERVER ERROR", "headers": {"x-token-status": {"description": "The status of the token sent", "type":"string", "enum":["empty", "expired", "valid"]}}}
+        }
+      },
+      "delete": {
+        "tags": ["Impianto"],
+        "description": "Delete all plants in system",
+        "parameters": [
+          {"name":"x-access-token", "in":"header", "type":"string"}],
+        "responses": {
+          "200": {"description": "OK", "headers": {"x-token-status": {"description": "The status of the token sent", "type":"string", "enum":["empty", "expired", "valid"]}}},
+          "401": {"description": "Token non presente", "headers": {"x-token-status": {"description": "The status of the token sent", "type":"string", "enum":["empty", "expired", "valid"]}}},
+          "403": {"description": "FORBIDDEN", "headers": {"x-token-status": {"description": "The status of the token sent", "type":"string", "enum":["empty", "expired", "valid"]}}},
+          "500": {"description": "INTERNAL SERVER ERROR", "headers": {"x-token-status": {"description": "The status of the token sent", "type":"string", "enum":["empty", "expired", "valid"]}}}
+        }
+      }
+    },
+    "/impianto/{id}": {
+      "get": {
+        "tags": ["Impianto"],
+        "description": "Get plant with {id}",
+        "parameters": [
+          {"name":"x-access-token", "in":"header", "type":"string"},
+          {"name":"id", "in":"path", "type":"string", "required":true}],
+        "responses": {
+          "200": {"description": "OK", "schema": {"$ref": "#/definitions/Impianto" }, "headers": {"x-token-status": {"description": "The status of the token sent", "type":"string", "enum":["empty", "expired", "valid"]}}},
+          "401": {"description": "Token non presente", "headers": {"x-token-status": {"description": "The status of the token sent", "type":"string", "enum":["empty", "expired", "valid"]}}},
+          "403": {"description": "FORBIDDEN", "headers": {"x-token-status": {"description": "The status of the token sent", "type":"string", "enum":["empty", "expired", "valid"]}}},
+          "500": {"description": "INTERNAL SERVER ERROR", "headers": {"x-token-status": {"description": "The status of the token sent", "type":"string", "enum":["empty", "expired", "valid"]}}}
+        }
+      },
+      "delete": {
+        "tags": ["Impianto"],
+        "description": "Delete plant with {id}",
+        "parameters": [
+          {"name":"x-access-token", "in":"header", "type":"string"},
+          {"name":"id", "in":"path", "type":"string", "required":true}],
+        "responses": {
+          "200": {"description": "OK", "headers": {"x-token-status": {"description": "The status of the token sent", "type":"string", "enum":["empty", "expired", "valid"]}}},
+          "401": {"description": "Token non presente", "headers": {"x-token-status": {"description": "The status of the token sent", "type":"string", "enum":["empty", "expired", "valid"]}}},
+          "403": {"description": "FORBIDDEN", "headers": {"x-token-status": {"description": "The status of the token sent", "type":"string", "enum":["empty", "expired", "valid"]}}},
+          "500": {"description": "INTERNAL SERVER ERROR", "headers": {"x-token-status": {"description": "The status of the token sent", "type":"string", "enum":["empty", "expired", "valid"]}}}
+        }
+      }
     }
   },
   "definitions": {
@@ -118,6 +191,17 @@
         "email_confermata": {"type":"boolean", "required":true, "default":false},
         "cf": {"type":"string", "unique":true},
         "attivo": {"type":"boolean", "required":true, "default":true}
+      }
+    },
+    "Impianto": {
+      "type" : "object",
+      "properties": {
+        "id": {"type":"String", "required":true, "unique":true},
+        "superficie": {"type":"Number", "required":true},
+        "indirizzo": {"type":"String", "required":true},
+        "fattura": {"type":"String", "required":true, "unique":true},
+        "dataAcquisto": {"type":"Date", "required":true},
+        "dataDismissione": {"type":"Date"}
       }
     }
   }
